// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authen-local-passport mock should be true for valid email 1`] = `true`;

exports[`authen-local-passport mock should be true for valid email and password 1`] = `true`;

exports[`authen-local-passport mock should be true for valid password 1`] = `true`;

exports[`authen-local-passport mock should create email verification url 1`] = `"http://localhost:3000/auth/local/FOO_TOKEN"`;

exports[`authen-local-passport mock should create email verification url 2`] = `"http://localhost:4000//auth/local/FOO_TOKEN"`;

exports[`authen-local-passport mock should create new password reset url 1`] = `"http://localhost:3000/auth/reset"`;

exports[`authen-local-passport mock should create new password reset url 2`] = `"http://localhost:4000//auth/reset"`;

exports[`authen-local-passport mock should create password reset url 1`] = `"http://localhost:3000/auth/reset/FOO_TOKEN"`;

exports[`authen-local-passport mock should create password reset url 2`] = `"http://localhost:4000//auth/reset/FOO_TOKEN"`;

exports[`authen-local-passport mock should redirect non exist token to /auth/error?name=token-not-exist 1`] = `"/auth/error?name=auth/token-not-exist"`;

exports[`authen-local-passport mock should redirect null token to /auth/error?name=token-not-provided 1`] = `"/auth/error?name=auth/token-not-provided"`;

exports[`authen-local-passport mock should reset password if user exist 1`] = `
Object {
  "_id": "592c0bb4484d740e0e73798b",
  "email": "foo@bar.com",
  "role": "user",
  "token": "aa90f9ca-ced9-4cad-b4a2-948006bf000d",
}
`;

exports[`authen-local-passport mock should signup new user and return user data 1`] = `
Object {
  "_id": "592c0bb4484d740e0e73798b",
  "foo": "bar",
  "role": "user",
}
`;

exports[`authen-local-passport mock-server should validate local strategy 1`] = `"/auth/error?name=auth/token-not-exist"`;

exports[`authen-local-passport mock-server should validate local strategy 2`] = `"/auth/error?name=auth/token-not-exist"`;
